--- a/admin/style/scss/partials/_media.scss
+++ b/admin/style/scss/partials/_media.scss
@@ -34,7 +34,7 @@ span.media-file-mode {
 		padding: 0;
 	}
 	audio {
-		width: 90%;
+		width: 100%;
 		margin-top: .5em;
 	}
 }
@@ -72,7 +72,7 @@ a.media-flag {
 li.media-action {
 	display: block;
 	position: absolute;
-	bottom: 4px;
+	top: 4px;
 	right: 8px;
 	height: 16px;
 	a {
@@ -94,10 +94,6 @@ li.media-action {
 	min-height: 0;
 	padding: 4px;
 	margin: .33em 0;
-}
-
-#entry-sidebar li.media-action {
-	top: 4px;
 }
 
 .folders-group .media-item {
